--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=macroapp
+spring.jpa.show-sql=true
+spring.data.rest.basePath=/api
+spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#calorie.ninjas.api.url=https://api.calorieninjas.com/v1/nutrition
+#calorie.ninjas.api.key=
